# cjson-beef

./: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts  build_libs.bat
example/: BeefProj.toml
example/src/: Program.bf
libs/: cjson-windows.lib
libs/windows/: cjson.lib  cjsond.lib
libs/windows/x64/: cjson.lib  cjson_d.lib
src/: cjson.bf
